Add pageview metadata

--- a/packages/docs/src/content/components/page-header/index.mdx
+++ b/packages/docs/src/content/components/page-header/index.mdx
@@ -1,9 +1,7 @@
 ---
 title: Page header
 description: Main heading and intro copy to introduce a page
-
 template: detail
-
 ---
 
 ## Why?
@@ -26,6 +24,25 @@ Use underneath the breadcrumb inside a container and above the main content. Use
     <p class="page-header__lead">
         Use a concise explanation of what the page is about
     </p>
+</div>
+```
+
+### With metadata
+
+```
+<div class="page-header">
+	<h1 class="page-header__heading">
+		Cerliponase alfa for treating neuronal ceroid lipofuscinosis type 2
+	</h1>
+	<ul class="page-header__metadata" aria-label="Product metadata">
+		<li>Highly specialised technologies guidance</li>
+		<li>HST12</li>
+		<li>Last updated: 29 October 2019</li>
+		<li>Last updated: 29 October 201</li>
+	</ul>
+	<p class="page-header__cta">
+		<button>Find out more now</button>
+	</p>
 </div>
 ```
 
