i've added a phrase to make it clearer

--- a/packages/docs/src/content/foundations/buttons/index.mdx
+++ b/packages/docs/src/content/foundations/buttons/index.mdx
@@ -14,7 +14,7 @@ Their main purpose is to trigger an action when the user clicks on them. It's im
 
 ## Button text
 
-- wording on buttons should be clear and inform the user what the button does
+- wording on buttons should be clear and inform the user what the button does, doesn't it?
 - words like ‘okay’ and ‘no’ don’t give the user enough information
 - make sure the button text describes an action
 - avoid excessively long button text
