New panel variants - inverse & impact-alt

--- a/packages/docs/src/content/components/panel/index.mdx
+++ b/packages/docs/src/content/components/panel/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Panel
 description: Blocks to highlight or separate content
-
 template: detail
-
+storybook: components-panel
+npm: nds-panel
 ---
 
 ## Why?
@@ -20,21 +20,11 @@ Panels have a margin above and below by default to separate from the surrounding
 
 ## Variants
 
-### Default (light) panel
+You can choose from the default panel (also called "supporting") and four additional variations:
 
-```
-<div class="panel">
-    <p>This is a default panel</p>
-</div>
-```
+- Inverse
+- Impact
+- Impact (alternative)
+- Inverse
 
-### Inverse (dark) panel
-
-```
-<div class="panel panel--inverse">
-    <p>This is a dark panel. <a href="">Links are inverted automatically</a>.</p>
-    <p>
-        <a href="#" class="btn btn--inverse">Inverse button</a>
-    </p>
-</div>
-```
+For examples of the variants and for examples of the HTML to use, see Storybook.
