Add storybook link

--- a/packages/docs/src/content/foundations/lists/index.mdx
+++ b/packages/docs/src/content/foundations/lists/index.mdx
@@ -4,6 +4,7 @@ description: Use of lists and nesting lists
 template: detail
 inpagenav: true
 github: components/design-system/scss/typography/_typography-lists.scss
+storybook: typography-lists
 ---
 
 ## Variations
