Panel fixes / default fallback

--- a/packages/docs/src/content/components/panel/index.mdx
+++ b/packages/docs/src/content/components/panel/index.mdx
@@ -22,7 +22,7 @@ Panels have a margin above and below by default to separate from the surrounding
 
 You can choose from the default panel (also called "supporting") and four additional variations:
 
-- Inverse
+- Primary
 - Impact
 - Impact (alternative)
 - Inverse
