Deprecate supporting variant

--- a/packages/docs/src/content/components/panel/index.mdx
+++ b/packages/docs/src/content/components/panel/index.mdx
@@ -16,11 +16,11 @@ Use panels in side panel as an aside from the main content, or to group related 
 
 Panels have a default padding and remove the margin top/bottom from the first/last children to maintain consistent padding.
 
-Panels have a margin above and below by default to separate from the surrounding content. Use with <a href="{{ site.baseurl }}{% link foundations/spacing.md %}#css-classes">spacing CSS classes</a> e.g. `mb--e` or `mt--0` to adjust the margins if necessary.
+Panels have a margin above and below by default to separate from the surrounding content.
 
 ## Variants
 
-You can choose from the default panel (also called "supporting") and four additional variations:
+You can choose from the default panel and four additional variations:
 
 - Primary
 - Impact
