Add in page nav stories

--- a/packages/docs/src/content/components/in-page-nav/index.mdx
+++ b/packages/docs/src/content/components/in-page-nav/index.mdx
@@ -4,7 +4,8 @@ navigationLabel: In-page nav
 description: Allows users to navigate to specific sections, within long pages of content, across any screen size.
 
 template: detail
-
+storybook: components-in-page-nav
+inpagenav: true
 ---
 
 ## Why?
