Initial tabs documentation and homepage tidying

--- a/packages/docs/src/content/foundations/index.mdx
+++ b/packages/docs/src/content/foundations/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Foundations
-description: The foundations and patterns that are to be used for faster product development.
+description: The foundations that are to be used for faster product development.
 template: overview
 order: 1
 ---
