--- a/packages/docs/src/content/components/tabs/index.mdx
+++ b/packages/docs/src/content/components/tabs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tabs
-description: Content is separated into different panes, with only one pane viewable at a time
+description: Content is separated into different panes, with only one pane viewable at a time.
 template: detail
 npm: nds-tabs
 storybook: components-tabs
