--- a/packages/docs/src/content/patterns/index.mdx
+++ b/packages/docs/src/content/patterns/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Patterns
-description: Common component use-cases and compositions
+description: Common component use-cases and compositions.
 template: overview
 order: -1
 ---
