--- a/packages/docs/src/content/components/tabs/index.mdx
+++ b/packages/docs/src/content/components/tabs/index.mdx
@@ -1,63 +1,65 @@
 ---
 title: Tabs
-description: Content is separated into different panes, with only one pane viewable at a time
-
+description: Content is separated into different panes, with only one pane viewable at a time.
 template: detail
-
+npm: nds-tabs
+storybook: components-tabs
 ---
 
-## Why?
+import { Tabs, Tab } from "@nice-digital/nds-tabs";
+import { Panel } from "@nice-digital/nds-panel";
+
+<Panel>
+	<Tabs>
+		<Tab title="Important thing one">
+			<p>Tab One content</p>
+		</Tab>
+		<Tab title="Important thing two">
+			<p>Tab Two content</p>
+		</Tab>
+		<Tab title="Important thing three">
+			<p>Tab Three content</p>
+		</Tab>
+	</Tabs>
+</Panel>
+
+## When to use
 
 When you have a group of related content, and you need to save space, or when your user needs to switch between grouped content.
 
-## Usage
+## Guidance
 
-Tabs should be used within a page for switching between groups of related content. They shouldn’t be a used as a way of navigating to different sections of the site. If your users need to compare content, or see all the content at one time, then tabs is not the correct solution.
+Tabs should be used within a page for switching between groups of related content. They <b>shouldn’t</b> be a used as a way of navigating to different sections of the site. If your users need to compare content, or see all the content at one time, then tabs are not the correct solution.
 
 - tab labels should be short (1-2 words), clear and descriptive
 - it’s recommend that between 3 and 5 tabs is the limit to the amount tabs you use
 - words used should relate to the content within each tab
 - arrangement of tabs should be in a order which makes sense to our users
 - do not use all caps for labels
-- avoid having tabs within tabs
+- don't have tabs within tabs
 - ARIA attributes are applied via JS
 - keyboard controls are enabled:
   _ Left/up and down/right changes the selected tab
   _ Home/end moves to first/last tab
 
-## Variants
+## Using the Tabs component
 
-There's only 1 variant of tabs:
+### React
 
-```
-<div class="tabs" data-tabs>
-	<ul class="tabs__list" role="tablist">
-		<li class="tabs__tab" role="presentation">
-			<button class="tabs__tab-btn" type="button" role="tab">
-				Tab 1
-			</button>
-		</li>
-		<li class="tabs__tab" role="presentation">
-			<button class="tabs__tab-btn" type="button" role="tab">
-				Tab 2
-			</button>
-		</li>
-		<li class="tabs__tab" role="presentation">
-			<button class="tabs__tab-btn" type="button" role="tab">
-				Tab 3
-			</button>
-		</li>
-	</ul>
-	<div class="tabs__content">
-		<div class="tabs__pane" role="tabpanel">
-			Content for tab 1
-		</div>
-		<div class="tabs__pane" role="tabpanel">
-			Content for tab 2
-		</div>
-		<div class="tabs__pane" role="tabpanel">
-			Content for tab 3
-		</div>
-	</div>
+Detailed instructions for using the component in React can be found on NPM.
+
+### In HTML
+
+Make sure the CSS and JS is loaded into your page. Follow the instructions here if you need to get started.
+
+```html
+<div data-tabs>
+	<div data-tab-title="Important thing one"><p>Tab One content</p></div>
+	<div data-tab-title="Important thing two"><p>Tab Two content</p></div>
+	<div data-tab-title="Important thing three"><p>Tab Three content</p></div>
 </div>
+
 ```
+
+The container should have the data attribute `data-tabs`. The direct children of this element will become the content of the three tabs, and the said children `data-tab-title` attribute will be the name of the tab. The first tab will be the active tab on load.
+
