In-page-nav JS docs

--- a/packages/docs/src/content/components/tabs/index.mdx
+++ b/packages/docs/src/content/components/tabs/index.mdx
@@ -50,13 +50,13 @@ Detailed instructions for using the component in React can be found on NPM.
 
 ### In HTML
 
-Make sure the CSS and JS is loaded into your page. Follow the instructions here if you need to get started.
+Make sure the CSS and JS is loaded into your page. If you're using this on nice.org.uk and "niceorg-client" is selected then the CSS and JS will already be available.
 
 ```html
 <div data-tabs>
-	<div data-tab-title="Important thing one"><p>Tab One content</p></div>
-	<div data-tab-title="Important thing two"><p>Tab Two content</p></div>
-	<div data-tab-title="Important thing three"><p>Tab Three content</p></div>
+	<div data-tab-title="Tab one title"><p>Tab One content</p></div>
+	<div data-tab-title="Tab two title"><p>Tab Two content</p></div>
+	<div data-tab-title="Tab three title"><p>Tab Three content</p></div>
 </div>
 
 ```
