--- a/packages/docs/src/content/components/in-page-nav/index.mdx
+++ b/packages/docs/src/content/components/in-page-nav/index.mdx
@@ -42,7 +42,7 @@ The basic version of the in-page-nav only requires the below data attribute to i
 | Option                      	| Data Attribute                                 	| Description                                                                                                                                               	| Default 	| Example                                                                                          	|
 |-----------------------------	|------------------------------------------------	|-----------------------------------------------------------------------------------------------------------------------------------------------------------	|---------	|--------------------------------------------------------------------------------------------------	|
 | Headings container selector 	| `data-in-page-nav-headings-container-selector` 	| This is a CSS-style selector for the scope of the page that you want the in-page-nav to use as its context.                                               	| `main`  	| `<div data-in-page-nav data-in-page-nav-headings-container-selector='.my-container'></div>`      	|
-| Headings to include         	| `data-in-page-nav-headings-selector`           	| Control for which headings you'd like to be included in the navigation. Defaults to `h2` and `h3`.                                                        	| `h2 h3` 	| `<div data-in-page-nav data-in-page-nav-headings-selector='h4 h5'></div>`                        	|
+| Headings to include         	| `data-in-page-nav-headings-selector`           	| Control for which headings you'd like to be included in the navigation. Defaults to `h2` and `h3`.                                                        	| `h2, h3` 	| `<div data-in-page-nav data-in-page-nav-headings-selector='h4, h5'></div>`                        	|
 | Headings to exclude         	| `data-in-page-nav-headings-exclude-selector`   	| Any CSS-style selectors you'd like to exclude.                                                                                                            	| none    	| `<div data-in-page-nav data-in-page-nav-headings-exclude-selector='.exclude-me-from-nav'></div>` 	|
 | Scroll tolerance            	| `data-in-page-nav-scroll-tolerance`            	| This is a pixel value to determine how close to the top of the viewport a heading has to be in order to be considered "active" and therefore highlighted. 	| `50`    	| `<div data-in-page-nav data-in-page-nav-scroll-tolerance='100'></div>`                           	|
 
