Included react usage

--- a/packages/docs/src/content/components/tabs/index.mdx
+++ b/packages/docs/src/content/components/tabs/index.mdx
@@ -46,7 +46,7 @@ Tabs should be used within a page for switching between groups of related conten
 
 ### React
 
-Detailed instructions for using the component in React can be found on NPM.
+Detailed instructions for using the component in React can be found on NPM, see the link at the top of the page.
 
 ### In HTML
 
