--- a/packages/docs/src/content/components/in-page-nav/index.mdx
+++ b/packages/docs/src/content/components/in-page-nav/index.mdx
@@ -31,6 +31,8 @@ Other usage notes:
 
 ### React
 
+Detailed instructions for using the component in React can be found on NPM, see the link at the top of the page.
+
 ### HTML
 
 Make sure the CSS and JS is loaded into your page. If you're using this on nice.org.uk and "niceorg-client" is selected then the CSS and JS will already be available.
