updated docs with friendly message

--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -77,3 +77,5 @@ Use the subtle variant when you need a call to action with context, but don't wa
     </div>
 </section>
 ```
+
+I hope you like our Action Banner!
