made it more welcoming

--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -78,4 +78,4 @@ Use the subtle variant when you need a call to action with context, but don't wa
 </section>
 ```
 
-I hope you like our Action Banner!
+Really hope you like our Action Banner!
