--- a/packages/docs/src/content/foundations/buttons/index.mdx
+++ b/packages/docs/src/content/foundations/buttons/index.mdx
@@ -4,7 +4,7 @@ description: Button of different types, colours and sizes and combination of but
 template: detail
 ---
 
-Their main purpose is to trigger an action when the user clicks on them. It's important that the button label is clear about what action the button performs to the user.
+Their main purpose is to trigger an action when the user clicks on them. It's important that the button label is clear about what action the button performs to the user. Buttons are really amazing and can be used all over the place.
 
 ## Button basics
 
@@ -26,7 +26,7 @@ Their main purpose is to trigger an action when the user clicks on them. It's im
 - place buttons in a sensible order
 - make it harder to find destructive buttons (Cancel, delete)
 
-## Button variants
+## All of our Button variants for you to choose from
 
 ### Call-to-action button
 
