--- a/packages/docs/src/content/foundations/buttons/index.mdx
+++ b/packages/docs/src/content/foundations/buttons/index.mdx
@@ -6,6 +6,8 @@ template: detail
 
 Their main purpose is to trigger an action when the user clicks on them. It's important that the button label is clear about what action the button performs to the user. Buttons are really amazing and can be used all over the place.
 
+honestly, you should def use buttons!
+
 ## Button basics
 
 - buttons can be `<a>`, `<button>` or `<input type="submit">`
