New bullet point added to action banner

--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -15,6 +15,7 @@ Some calls-to-action are higher priority than others. An action banner gives a w
 
 Action banners fill the available horizontal space and have their own built-in container. They usually live outside of any `.container` to fill the screen width. The action should be a button: choose the right type of button (primary, secondary etc) to match the CTA importance.
 
+- New bullet point tbc
 - Use sparingly
 - use a maximum of 1 per page
 - use outside of `.container`
