--- a/packages/docs/src/content/foundations/links/index.mdx
+++ b/packages/docs/src/content/foundations/links/index.mdx
@@ -21,6 +21,7 @@ The wording of links is very important and should be contextual and meaningful. 
 - explains what the link offers
 - doesn't talk about mechanics
 - is not a verb phrase.
+- testing changes
 
 ## Text links
 
