--- a/packages/docs/src/content/foundations/buttons/index.mdx
+++ b/packages/docs/src/content/foundations/buttons/index.mdx
@@ -83,7 +83,7 @@ TODO
 
 - disabled buttons are lowered down to 50% opacity to ensure they look unclickable
 - if you are using disabled buttons, make sure there is a valid reason
-- provide clear infomation on why its disabled (error message or label text)
+- provide clear infomation on why it's disabled (error message or label text)
 - you can use `[disabled]`, `[disabled='disabled']`, `.disabled`, `.btn--disabled` or `[aria-disabled='true']`
 
 ```
