NDS-79 Phase banner component

--- a/packages/docs/src/content/components/phase-banner/index.mdx
+++ b/packages/docs/src/content/components/phase-banner/index.mdx
@@ -3,16 +3,13 @@ title: Phase banner
 description: Alpha and beta beta banners clearly identify non-live services
 
 template: detail
-
----
-
-## Why?
+---## Why?
 
 If your service is on the NICE subdomain and is within alpha or beta you must have a phase banner which reflects this.
 
 ## Usage
 
-Your banner must sit below the TopHat, and above the page breadcrumb. You should use a ‘feedback’ link to collect feedback about your service. Ensure the user can return to their previous point in the page, having opened a dedicated page or form.
+Your banner must sit below the Global Nav, and above the page breadcrumb. You should use a ‘feedback’ link to collect feedback about your service. Ensure the user can return to their previous point in the page, having opened a dedicated page or form.
 
 ## Variants
 
