Update packages to get get docs working

--- a/packages/docs/src/content/components/filters/index.mdx
+++ b/packages/docs/src/content/components/filters/index.mdx
@@ -15,7 +15,7 @@ import {
 	FilterOption,
 	FilterByInput
 } from "@nice-digital/nds-filters";
-import Panel from "@nice-digital/nds-panel";
+import { Panel } from "@nice-digital/nds-panel";
 
 ## Filter Summary
 
